# judger

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/judger/: types.py
src/judger/infer/: infer_protocol.py  openai_infer.py
src/judger/judger/: judger_protocol.py
tests/: test_infer_protocol.py  test_judger_protocol.py  test_openai_infer.py  test_types.py
