[project]
name = "judger"
version = "0.1.0"
description = "LLM Judger"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"
show_error_codes = true
disable_error_code = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
exclude = ["tests"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
